--- a/src/index.css
+++ b/src/index.css
@@ -52,8 +52,8 @@ input[type="number"] {
   background: linear-gradient(
     168.82deg,
     #fb37ff 1.7%,
-    rgba(155, 111, 238, 0) 47.12%,
-    rgba(123, 127, 234, 0) 11.28%,
-    #6B3FCB 99.52%
+    rgba(155, 111, 238, 0) 27.12%,
+    rgba(123, 127, 234, 0) 61.28%,
+    #1bb2de 99.52%
   );
 }
